--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "grunt-contrib-jade": "^0.12.0",
     "grunt-contrib-stylus": "^0.18.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-gh-pages": "^0.9.1",
     "load-grunt-tasks": "^0.6.0"
   }
 }
