--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-jade": "^0.12.0",
     "grunt-contrib-stylus": "^0.18.0",
     "grunt-contrib-watch": "^0.6.1",
